<resources>
    <string name="app_name">ASAF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>


    <string name="jjw_contact">jjw@123.com</string>
    <string name="khj_contact">khj@123.com</string>
    <string name="kmj_contact">kmj-4567</string>
    <string name="phw_contact">phw@123.com</string>
    <string name="kjs_contact">kjs-4567</string>
    <string name="cjw_contact">cjw-4567</string>

    <string name="jjw_git">https://jjw_git</string>
    <string name="khj_git">https://khj_git</string>
    <string name="kmj_git">https://kmj_git</string>
    <string name="phw_git">https://phw_git</string>
    <string name="kjs_git">https://kjs_git</string>
    <string name="cjw_git">https://cjw_git</string>


</resources>